classDiagram
    namespace Models {
        class Card {
            +Rank Rank
            +Suit Suit
            +ToString() string
        }
        class Player {
            +string Name
            +int ChipStack
            +PlayerState State
            +bool IsAllIn
            +int SeatIndex
            +Player(string name, int startingChips, int seatIndex)
        }
        class PlayerStatus {
            +List~Card~ Hand
            +PlayerState State
            +int CurrentBet
            +bool HasActed
            +ResetStatus()
        }
        class Pot {
            +int TotalChips
            +AddChips(int amount)
            +Reset()
        }
        class Deck {
            -Stack~Card~ _cards
            +Shuffle()
            +Draw() Card
            +RemainingCards() int
        }
        class ShowdownResult {
            +List~Player~ Winners
            +HandRank Rank
            +List~PlayerShowdownDetail~ Details
        }
    }

    namespace Enums {
        class Suit {
            <<enumeration>>
            Hearts, Diamonds, Clubs, Spades
        }
        class Rank {
            <<enumeration>>
            Two ... Ace
        }
        class HandRank {
            <<enumeration>>
            HighCard ... StraightFlush
        }
        class GamePhase {
            <<enumeration>>
            PreFlop, Flop, Turn, River, Showdown
        }
        class PlayerState {
            <<enumeration>>
            Active, Folded, AllIn, Eliminated
        }
        class GameState {
            <<enumeration>>
            WaitingForPlayers, InProgress, Completed
        }
    }

    namespace Interfaces {
        class IGameController {
            <<interface>>
            +GetGameState() string
            +GetTotalPot() int
            +AddPlayer(string name, int chips, int seatIndex)
            +StartRound()
            +HandleBet(IPlayer player, int amount) bool
            +ResolveShowdown() List~IPlayer~
        }
        class IDeck { <<interface>> }
        class IPlayer { <<interface>> }
        class IPot { <<interface>> }
    }

    namespace Services {
        class GameController {
            -IDeck _deck
            -IPot _pot
            -Dictionary~IPlayer, PlayerStatus~ PlayerMap
            +StartRound()
            +NextPhase()
            +HandleBet(...)
            -EvaluateHand(...)
            -TryAutoAdvance(...)
        }
    }

    namespace Hubs {
        class PokerHub {
            +SendGameState(object gameState)
            +SendMessage(string message)
        }
    }

    %% Relationships
    Player ..|> IPlayer : implements
    Deck ..|> IDeck : implements
    Pot ..|> IPot : implements
    GameController ..|> IGameController : implements

    GameController "1" *-- "1" IDeck : uses
    GameController "1" *-- "1" IPot : uses
    GameController "1" o-- "*" IPlayer : manages
    GameController "1" o-- "*" PlayerStatus : tracks state for players
    
    PlayerStatus "1" o-- "*" Card : contains
    Deck "1" o-- "52" Card : contains
    Card --> Rank : has
    Card --> Suit : has
    
    Player --> PlayerState : has
    PlayerStatus --> PlayerState : has
    GameController --> GamePhase : tracks
    GameController --> GameState : tracks
    
    ShowdownResult --> HandRank : has
    ShowdownResult o-- "*" Player : winners
